# s3_zip_uploader

./: README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
file_uploader/: cli.py  loader.py  main.py
tests/: test_uploader.py
